tests/miniJava/neg/006841_mutation.MiniJava
class this { public static void Main ( String [ ] java ) { { } } }
